merge from chenyu