@@ -16,6 +16,7 @@ public class MsgReceiver implements Runnable {
     private int bufferSize = 4096; //lenght of message
     private HashMap<String, Boolean> endMap = null;
     private int retry = 0;
+    private MsgLogger msgLogger = new MsgLogger();
 
     public MsgReceiver(MsgSender msgSender, String ip, int port, InetAddress broadcast) {
         this.msgSender = msgSender;
@@ -36,6 +37,8 @@ public class MsgReceiver implements Runnable {
                 if(this.state.equals("new")) {
                     msgSender.sendJoin();
                     this.setJoining();
+                    // TODO: FOR LOGGER DEBUG
+                    // handleJoin(new ReliableMsg(Constants.MSG_ALIVE, "TEST ", System.currentTimeMillis(), "TEST", "TEST", 1, null));
                 }
                 try {
                     selector.select();
@@ -57,22 +60,22 @@ public class MsgReceiver implements Runnable {
                             ObjectInputStream ois = new ObjectInputStream(bais);
                             ReliableMsg msg = (ReliableMsg) ois.readObject();
                             switch(msg.getType()){
-                                case("JOIN"):
+                                case(Constants.MSG_JOIN):
                                     handleJoin(msg);
                                     break;
-                                case("END"):
+                                case(Constants.MSG_END):
                                     handleEnd(msg);
                                     break;
-                                case("ACK"):
+                                case(Constants.MSG_ACK):
                                     handleACK(msg);
                                     break;
-                                case("MSG"):
+                                case(Constants.MSG):
                                     handleMsg(msg);
                                     break;
-                                case("ALIVE"):
+                                case(Constants.MSG_ALIVE):
                                     handleAlive(msg);
                                     break;
-                                case("DROP"):
+                                case(Constants.MSG_DROP):
                                     handleDrop(msg);
                                 default:
                                     break;
@@ -88,13 +91,15 @@ public class MsgReceiver implements Runnable {
         }
     }
 
-    public void handleJoin(ReliableMsg msg) {
+    public void handleJoin(ReliableMsg msg) throws IOException {
         switch(this.state) {
             case("new"):
                 //ignored
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_NEW);
                 break;
             case("joining"):
                 //ignored
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINING);
                 break;
             case("joined"):
                 this.setChange();
@@ -105,14 +110,16 @@ public class MsgReceiver implements Runnable {
                 }
                 this.endMap.put(msg.getFrom(), false);
                 this.msgSender.sendEnd();//need add acheker for arraylist
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINED);
                 break;
             case("change"):
                 //ignored
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_CHANGE);
                 break;
         }
     }
 
-    public void handleEnd(ReliableMsg msg) {
+    public void handleEnd(ReliableMsg msg) throws IOException {
         String s = msg.getBody();
         String[] t = s.split(";");
         HashSet<String> tmp = new HashSet<>(Arrays.asList(t));
@@ -120,8 +127,10 @@ public class MsgReceiver implements Runnable {
         switch(this.state) {
             case("new"):
                 //ignored
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_NEW);
                 break;
             case("joining"):
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINING);
                 if(tmp.contains(this.ip)) {
                     if(this.endMap == null) {// il primo end che ricevo
                         this.msgSender.setMemberMap(tmp);
@@ -136,7 +145,7 @@ public class MsgReceiver implements Runnable {
                             this.endMap.keySet().removeAll(tmp); //back-end and vice versa so we just modify on hashset to change hashmap
                             //this.endMap.keySet().remove(this.msgSender.getLastJoinIp());
                             ArrayList<String> arrayTmp = new ArrayList<>(this.endMap.keySet());
-                            this.msgSender.setLastRemoveIp(arrayTmp.getFirst());
+                            this.msgSender.setLastRemoveIp(arrayTmp.get(0));
                             this.endMap = new HashMap<>();
                             for (String a : tmp) {
                                 this.endMap.put(a, false);
@@ -152,7 +161,7 @@ public class MsgReceiver implements Runnable {
                             }
                         }
                         if(done) {
-                            this.setJoined(msg.getType());
+                            this.setJoined(msg.getType(), msg.getView());
                         }
                         break;
                     }
@@ -169,12 +178,14 @@ public class MsgReceiver implements Runnable {
                 }
                 break;
             case ("joined"):
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINED);
                 this.setChange();
                 if(tmp.size() > this.msgSender.getMember().size()) {
                     //this a join
                     tmp.removeAll(this.msgSender.getMember());
                     ArrayList<String> arrayTmp = new ArrayList<>(tmp);
-                    this.msgSender.setLastJoin(arrayTmp.getFirst(), msg.getTimestamp());
+                    this.msgSender.setLastJoin(arrayTmp.get(0), msg.getTimestamp());
+                    //this.msgSender.setLastJoin(arrayTmp.getFirst(), msg.getTimestamp());
                     this.endMap = new HashMap<>();
                     for (String a : tmp) {
                         this.endMap.put(a, false);
@@ -201,6 +212,7 @@ public class MsgReceiver implements Runnable {
                 this.msgSender.sendEnd();//need add acheker for arraylist
                 break;
             case ("change"):
+                msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_CHANGE);
                 if (tmp.size() == this.endMap.size()) {
                     if (tmp.equals(this.endMap.keySet())) {
                         this.endMap.replace(msg.getFrom(), false, true);
@@ -221,7 +233,8 @@ public class MsgReceiver implements Runnable {
                     tmp.remove(this.msgSender.getLastRemoveIp());
                     tmp.removeAll(this.msgSender.getMember());
                     ArrayList<String> arrayTmp = new ArrayList<>(tmp);
-                    this.msgSender.setLastJoin(arrayTmp.getFirst(), msg.getTimestamp());
+                    this.msgSender.setLastJoin(arrayTmp.get(0), msg.getTimestamp());
+//                    this.msgSender.setLastJoin(arrayTmp.getFirst(), msg.getTimestamp());
                     this.endMap = new HashMap<>();
                     for(String a : tmp) {
                         this.endMap.put(a, false);
@@ -234,7 +247,8 @@ public class MsgReceiver implements Runnable {
                     this.endMap.keySet().removeAll(tmp); //back-end and vice versa so we just modify on hashset to change hashmap
                     this.endMap.keySet().remove(this.msgSender.getLastJoinIp());
                     ArrayList<String> arrayTmp = new ArrayList<>(this.endMap.keySet());
-                    this.msgSender.setLastRemoveIp(arrayTmp.getFirst());
+                    this.msgSender.setLastRemoveIp(arrayTmp.get(0));
+//                    this.msgSender.setLastRemoveIp(arrayTmp.getFirst());
                     this.endMap = new HashMap<>();
                     for (String a : tmp) {
                         this.endMap.put(a, false);
@@ -250,81 +264,95 @@ public class MsgReceiver implements Runnable {
                     }
                 }
                 if(done) {
-                    this.setJoined(msg.getType());
+                    this.setJoined(msg.getType(), msg.getView());
                 }
                 break;
         }
     }
 
-    public void handleACK(ReliableMsg msg) {
+    public void handleACK(ReliableMsg msg) throws IOException {
         if (msgSender.isMember(msg.getFrom())) {
             switch (this.state) {
                 case ("new"):
                     //not gonna happen
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_NEW);
                     break;
                 case ("joining"):
                     //not gonna happen
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINING);
                     break;
                 case ("joined"):
                     //
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINED);
                     break;
                 case ("change"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_CHANGE);
                     break;
             }
         }
     }// wait rentao
 
-    public void handleMsg(ReliableMsg msg) {
+    public void handleMsg(ReliableMsg msg) throws IOException {
         if (msgSender.isMember(msg.getFrom()) && msg.getView() == this.msgSender.getView()) {
             switch (this.state) {
                 case ("new"):
                     //ignored
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_NEW);
                     break;
                 case ("joining"):
                     //ignored
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINING);
                     break;
                 case ("joined"):
                     //add here
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINED);
                     break;
                 case ("change"):
                     //add here
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_CHANGE);
                     break;
             }
         }//wait rentao
     }
 
-    public void handleAlive(ReliableMsg msg) {
+    public void handleAlive(ReliableMsg msg) throws IOException {
         if (msgSender.isMember(msg.getFrom())) {
             switch (this.state) {
                 case ("new"):
                     //ignored
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_NEW);
                     break;
                 case ("joining"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINING);
                     if(this.endMap == null) {
                         retry++;
                     }
                     if(retry > 2) {
-                        this.setJoined(msg.getType()); // i am alone so i am the member now
+                        this.setJoined(msg.getType(), msg.getView());; // i am alone so i am the member now
                     }
                     this.msgSender.update(msg.getFrom(), msg.getTimestamp());
                     break;
                 case ("joined"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINED);
                     this.msgSender.update(msg.getFrom(), msg.getTimestamp());
                     break;
                 case ("change"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_CHANGE);
                     this.msgSender.update(msg.getFrom(), msg.getTimestamp());
                     break;
             }
         }
     }
 
-    public void handleDrop(ReliableMsg msg) {
+    public void handleDrop(ReliableMsg msg) throws IOException {
         if (msgSender.isMember(msg.getFrom())) {
             switch (this.state) {
                 case ("new"):
                     //ignored
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_NEW);
                     break;
                 case ("joining"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINING);
                     if(this.endMap != null) {
                         this.msgSender.setLastRemoveIp(msg.getBody());
                         this.endMap.keySet().remove(msg.getBody());
@@ -336,11 +364,12 @@ public class MsgReceiver implements Runnable {
                             }
                         }
                         if(done) {
-                            this.setJoined(msg.getType());
+                            this.setJoined(msg.getType(), msg.getView());
                         }
                     }
                     break;
                 case ("joined"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_JOINED);
                     this.setChange();
                     this.msgSender.setLastRemoveIp(msg.getBody());
                     this.endMap = new HashMap<>();
@@ -351,6 +380,7 @@ public class MsgReceiver implements Runnable {
                     this.msgSender.sendEnd();//need add acheker for arraylist
                     break;
                 case ("change"):
+                    msgLogger.printLog(msg,Constants.MSG_SUCC,null,Constants.STATE_CHANGE);
                     this.msgSender.setLastRemoveIpShadow(msg.getBody());
                     this.endMap.keySet().remove(msg.getBody());
                     boolean done = true;
@@ -361,12 +391,13 @@ public class MsgReceiver implements Runnable {
                         }
                     }
                     if(done) {
-                        this.setJoined(msg.getType());
+                        this.setJoined(msg.getType(), msg.getView());
                     }
                     break;
             }
         }
     }
+
     public void setNew() {
         this.state = "new";
         this.endMap = null;
@@ -386,11 +417,12 @@ public class MsgReceiver implements Runnable {
         this.msgSender.setFalse();
     }
 
-    public void setJoined(String type) {
+    public void setJoined(String type, int view) {
         this.state = "joined";
         this.endMap = null;
         this.msgSender.setType(type);
         this.msgSender.setTrue();
+        this.msgSender.updateView(view);
     }
 
 }
